@@ -9,19 +9,28 @@ import dk.dbc.dataio.commons.testcontainers.PostgresContainerJPAUtils;
 import dk.dbc.dataio.jobstore.distributed.ChunkSchedulingStatus;
 import dk.dbc.dataio.jobstore.distributed.DependencyTracking;
 import dk.dbc.dataio.jobstore.distributed.TrackingKey;
+import dk.dbc.dataio.jobstore.distributed.WaitForKey;
 import dk.dbc.dataio.jobstore.distributed.hz.serializer.RemoveWaitingOnSer;
 import dk.dbc.dataio.jobstore.distributed.hz.serializer.StatusChangeSer;
 import dk.dbc.dataio.jobstore.distributed.hz.serializer.TrackingKeySer;
 import dk.dbc.dataio.jobstore.distributed.hz.serializer.UpdateCounterSer;
 import dk.dbc.dataio.jobstore.distributed.hz.serializer.UpdateStatusSer;
+import dk.dbc.dataio.jobstore.service.dependencytracking.DependencyTrackingService;
+import dk.dbc.dataio.jobstore.service.dependencytracking.Hazelcast;
 
 import java.util.Collection;
+import java.util.Comparator;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.BiFunction;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import static dk.dbc.dataio.jobstore.distributed.ChunkSchedulingStatus.READY_FOR_PROCESSING;
+import static dk.dbc.dataio.jobstore.distributed.ChunkSchedulingStatus.SCHEDULED_FOR_PROCESSING;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
@@ -29,7 +38,7 @@ public class QueriesTest extends JetTestSupport implements PostgresContainerJPAU
     @org.junit.Test
     public void waitingOn() {
         IMap<TrackingKey, DependencyTracking> dependencies = createHazelcastInstance().getMap("dependencies");
-        addToTrackersToMap(dependencies, 1, 0, 10000, (i, dt)-> dt);
+        addToTrackersToMap(dependencies, 1, 0, 10000, (i, dt) -> dt);
         addToTrackersToMap(dependencies, 2, 0, 10000, (i, dt) -> dt.setWaitingOn(Set.of(new TrackingKey(1, 9999))));
         addToTrackersToMap(dependencies, 3, 0, 10000, (i, dt) -> dt.setWaitingOn(
                 i < 1000 ? Set.of(new TrackingKey(2, 9999))
@@ -60,12 +69,14 @@ public class QueriesTest extends JetTestSupport implements PostgresContainerJPAU
         IMap<TrackingKey, DependencyTracking> dependencies = createHazelcastInstance().getMap("dependencies");
         Set<String> matchKeys = Set.of("hest", "lasagne", "pizza");
         Set<String> falseKeys = Set.of("bulgur", "linser");
-        addToTrackersToMap(dependencies, 1, 0, 123456,20, (i, dt) -> dt.setMatchKeys(matchKeys));
-        addToTrackersToMap(dependencies, 2, 0, 20, (i, dt) -> dt.setMatchKeys(falseKeys));
-        addToTrackersToMap(dependencies, 3, 0, 20, (i, dt) -> dt);
-        addToTrackersToMap(dependencies, 4, 0, 20, (i, dt) -> dt.setMatchKeys(matchKeys));
-        addToTrackersToMap(dependencies, 5, 0, 123456, 20, (i, dt) -> dt.setMatchKeys(matchKeys));
-        addToTrackersToMap(dependencies, 6, 1, 123456, 20, (i, dt) -> dt.setMatchKeys(matchKeys));
+        addToTrackersWithMatchKey(dependencies, 1, 0, 123456,20, i -> matchKeys);
+        addToTrackersWithMatchKey(dependencies, 2, 0, 20,i -> falseKeys);
+        addToTrackersWithMatchKey(dependencies, 3, 0, 20, i -> Set.of());
+        addToTrackersWithMatchKey(dependencies, 4, 0, 20, i -> matchKeys);
+        addToTrackersWithMatchKey(dependencies, 5, 0, 123456, 20, i -> matchKeys);
+        addToTrackersWithMatchKey(dependencies, 6, 1, 123456, 20, i -> matchKeys);
+        Set<TrackingKey> waitFor = new DependencyTrackingService().findChunksToWaitFor(new DependencyTracking(new TrackingKey(7, 0), 0, 123456, Set.of("lasagne")), null);
+        System.out.println("Waiting for chunks to wait for " + waitFor.size() + " hits");
 //        Integer[] hashes = matchKeys.stream().limit(1).map(Hashcode::of).toArray(Integer[]::new);
 //        Collection<DependencyTracking> result = dependencies.values(new ChunksToWaitFor(0, 123456, hashes, ""));
 //        assertEquals(40, result.size());
@@ -74,7 +85,9 @@ public class QueriesTest extends JetTestSupport implements PostgresContainerJPAU
 
     @Override
     protected HazelcastInstance createHazelcastInstance() {
-        return createHazelcastInstance(makeConfig());
+        HazelcastInstance instance = createHazelcastInstance(makeConfig());
+        Hazelcast.testInstance(instance);
+        return instance;
     }
 
     private Config makeConfig() {
@@ -87,48 +100,70 @@ public class QueriesTest extends JetTestSupport implements PostgresContainerJPAU
     @org.junit.Test
     public void jobChunksWaitForKey() {
         IMap<TrackingKey, DependencyTracking> dependencies = createHazelcastInstance().getMap("dependencies");
+        DependencyTrackingService service = new DependencyTrackingService();
         Set<String> matchKeys = Set.of("hest", "lasagne", "pizza");
-        addToTrackersToMap(dependencies, 1, 0, 20, (i, dt) -> dt.setMatchKeys(i < 10 ? Set.of("hest") : Set.of("bulgur")));
-        addToTrackersToMap(dependencies, 2, 0, 20, (i, dt) -> dt.setMatchKeys(i < 10 ? Set.of("hest") : Set.of("bulgur")));
-        addToTrackersToMap(dependencies, 3, 0, 20, (i, dt) -> dt.setMatchKeys(Set.of("bulgur")));
-        addToTrackersToMap(dependencies, 4, 1, 20, (i, dt) -> dt.setMatchKeys(Set.of("hest")));
-        Collection<DependencyTracking> result = dependencies.values(new JobChunksWaitForKey(0, 1, matchKeys));
-        assertEquals("There should be 20 hits from job 1 and 10 from job 2", 30, result.size());
-        assertTrue(result.stream().map(DependencyTracking::getKey).mapToInt(TrackingKey::getJobId).allMatch(jobId -> jobId == 1 || jobId == 2));
+        addToTrackersWithMatchKey(dependencies, 1, 0, 4, (Integer i) -> i < 2 ? Set.of("hest") : Set.of("bulgur"));
+        addToTrackersWithMatchKey(dependencies, 2, 0, 4, (Integer i) -> i < 2 ? Set.of("hest") : Set.of("bulgur"));
+        addToTrackersWithMatchKey(dependencies, 3, 0, 4, i -> Set.of("bulgur"));
+        addToTrackersWithMatchKey(dependencies, 4, 1, 4, i -> Set.of("hest"));
+        Set<TrackingKey> waitForHorses = service.findChunksToWaitFor(new DependencyTracking(new TrackingKey(5, 0), 0, 0, Set.of("hest")), null);
+        System.out.println("Waiting for chunks to wait for " + waitForHorses.size() + " hits");
+        Set<TrackingKey> expectHorses = dependencies.values().stream()
+                .filter(dt -> dt.getSinkId() == 0)
+                .filter(dt -> dt.getSubmitter() == 0)
+                .filter(dt -> dt.getWaitFor().contains(new WaitForKey(0, 0, "hest")))
+                .map(DependencyTracking::getKey)
+                .collect(Collectors.toSet());
+        assertEquals(expectHorses, waitForHorses);
+        Set<TrackingKey> waitForAll = service.findChunksToWaitFor(new DependencyTracking(new TrackingKey(5, 0), 0, 0, Set.of("hest", "bulgur")), null);
+        Set<TrackingKey> expectAll = dependencies.values().stream()
+                .filter(dt -> dt.getSinkId() == 0)
+                .filter(dt -> dt.getSubmitter() == 0)
+                .filter(dt -> Set.of("hest", "bulgur").stream().anyMatch(s -> dt.getWaitFor().contains(new WaitForKey(0, 0, s))))
+                .map(DependencyTracking::getKey)
+                .collect(Collectors.toSet());
+        assertEquals(expectAll, waitForAll);
     }
 
     @org.junit.Test
     public void find() {
-//        Hazelcast.testInstance(createHazelcastInstance());
-//        DependencyTrackingService service = new DependencyTrackingService();
-//        List<DependencyTracking> trackers = IntStream.range(0, 30)
-//                .mapToObj(i -> new DependencyTracking(i / 5, i % 5, 1, null, Set.of())
-//                    .setPriority(i % 4)
-//                    .setStatus(i % 2 == 0 ? READY_FOR_PROCESSING : SCHEDULED_FOR_PROCESSING))
-//                .collect(Collectors.toList());
-//        trackers.forEach(service::add);
-//        Collection<DependencyTracking> result = service.findDependencies(SCHEDULED_FOR_PROCESSING, 1, 10);
-//        List<DependencyTracking> expected = trackers.stream()
-//                .filter(dt -> dt.getSinkId() == 1)
-//                .filter(dt -> dt.getStatus() == SCHEDULED_FOR_PROCESSING)
-//                .sorted(Comparator.comparing(DependencyTracking::getPriority).reversed().thenComparing(DependencyTracking::getKey))
-//                .limit(10)
-//                .collect(Collectors.toList());
-//        Assertions.assertIterableEquals(expected, result);
+        Hazelcast.testInstance(createHazelcastInstance());
+        DependencyTrackingService service = new DependencyTrackingService();
+        List<DependencyTracking> trackers = IntStream.range(0, 30)
+                .mapToObj(i -> new DependencyTracking(new TrackingKey(i / 5, i % 5), 1, 0, Set.of())
+                    .setPriority(i % 4)
+                    .setStatus(i % 2 == 0 ? READY_FOR_PROCESSING : SCHEDULED_FOR_PROCESSING))
+                .toList();
+        trackers.forEach(service::add);
+        Collection<DependencyTracking> result = service.findDependencies(SCHEDULED_FOR_PROCESSING, 1, 10);
+        List<DependencyTracking> expected = trackers.stream()
+                .filter(dt -> dt.getSinkId() == 1)
+                .filter(dt -> dt.getStatus() == SCHEDULED_FOR_PROCESSING)
+                .sorted(Comparator.comparing(DependencyTracking::getPriority).reversed().thenComparing(DependencyTracking::getKey))
+                .limit(10)
+                .toList();
+        assertEquals(new HashSet<>(expected), new HashSet<>(result));
     }
 
     private DependencyTracking setStatusByChunkMod(Integer chunkId, DependencyTracking dt) {
         return dt.setStatus(ChunkSchedulingStatus.values()[chunkId % ChunkSchedulingStatus.values().length]);
     }
 
-    private void addToTrackersToMap(Map<TrackingKey, DependencyTracking> map, int jobId, int sinkId, int chunks, BiFunction<Integer, DependencyTracking, DependencyTracking> dtModifier) {
-        addToTrackersToMap(map, jobId, sinkId, 0, chunks, dtModifier);
+    private void addToTrackersWithMatchKey(Map<TrackingKey, DependencyTracking> map, int jobId, int sinkId, int chunks, Function<Integer, Set<String>> matchKeysFunc) {
+        addToTrackersWithMatchKey(map, jobId, sinkId, 0, chunks, matchKeysFunc);
     }
 
-    private void addToTrackersToMap(Map<TrackingKey, DependencyTracking> map, int jobId, int sinkId, int submitter, int chunks, BiFunction<Integer, DependencyTracking, DependencyTracking> dtModifier) {
+    private void addToTrackersWithMatchKey(Map<TrackingKey, DependencyTracking> map, int jobId, int sinkId, int submitter, int chunks, Function<Integer, Set<String>> matchKeysFunc) {
         IntStream.range(0, chunks)
                 .mapToObj(chunkId -> new TrackingKey(jobId, chunkId))
-                .map(key -> new DependencyTracking(key, sinkId, submitter))
+                .map(key -> new DependencyTracking(key, sinkId, submitter, matchKeysFunc.apply(key.getChunkId())))
+                .forEach(dt -> map.put(dt.getKey(), dt));
+    }
+
+    private void addToTrackersToMap(Map<TrackingKey, DependencyTracking> map, int jobId, int sinkId, int chunks, BiFunction<Integer, DependencyTracking, DependencyTracking> dtModifier) {
+        IntStream.range(0, chunks)
+                .mapToObj(chunkId -> new TrackingKey(jobId, chunkId))
+                .map(key -> new DependencyTracking(key, sinkId, 0))
                 .map(dt -> dtModifier.apply(dt.getKey().getChunkId(), dt))
                 .forEach(dt -> map.put(dt.getKey(), dt));
     }
